--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="box">
             <img src="constellation.png" alt="">
             <h3>constellation</h3>
-            <p>Dalam ruang tiga dimensi bintang tidak memiliki hubungan satu sama lain, tetapi mata kita melihatnya seperti saling berhubungan dan membentuk konfigurasi khusus yang kita sebut rasi bintang.</p>
+            <p>Dalam ruang tiga dimensi, bintang tidak memiliki hubungan satu sama lain, tetapi mata kita melihatnya seperti saling berhubungan dan membentuk konfigurasi khusus yang kita sebut rasi bintang.</p>
             <a href="#" class="btn">read more</a>
         </div>
 
